[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
logos = "0.12"
eventree_wrapper = { path = "..", features = ["logos"] }

[dev-dependencies]
expect-test = "1.4"