[package]
name = "parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
logos = ["dep:logos"]

[dependencies]
drop_bomb = "0.1.5"
eventree = "0.6"
logos = { version = "0.12", optional = true }
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
expect-test = "1.4"
lazy_static = "1.4"
logos = "0.12"